-R CMD no errors -loaded default data in inst/extdata -find default data with system.file() -5 warnings from R CMD: 2 warnings are UID overload (can ignore) Also warnings to importFrom Also warnings to define variables

--- a/lifeTimes.Rcheck/lifeTimes/html/00Index.html
+++ b/lifeTimes.Rcheck/lifeTimes/html/00Index.html
@@ -21,6 +21,8 @@
 
 
 <table width="100%">
+<tr><td style="width: 25%;"><a href="define_tsMetaData.html">define_tsMetaData</a></td>
+<td>define_tsMetaData</td></tr>
 <tr><td style="width: 25%;"><a href="lifeTimesChain.html">lifeTimesChain</a></td>
 <td>lifeTimesChain</td></tr>
 <tr><td style="width: 25%;"><a href="wide_ts_to_ccf.html">wide_ts_to_ccf</a></td>
