R CMD passing - 0 errors - 0 warnings - 2 notes

--- a/lifeTimes.Rcheck/lifeTimes/html/00Index.html
+++ b/lifeTimes.Rcheck/lifeTimes/html/00Index.html
@@ -21,11 +21,23 @@
 
 
 <table width="100%">
+<tr><td style="width: 25%;"><a href="clusterCCFs.html">clusterCCFs</a></td>
+<td>clusterCCFs</td></tr>
+<tr><td style="width: 25%;"><a href="clusterPlot.html">clusterPlot</a></td>
+<td>plotChartFromClustered</td></tr>
+<tr><td style="width: 25%;"><a href="couplingPlot.html">couplingPlot</a></td>
+<td>couplingPlot !</td></tr>
+<tr><td style="width: 25%;"><a href="defaultTimeSeries.html">defaultTimeSeries</a></td>
+<td>This is data to be included in my package</td></tr>
 <tr><td style="width: 25%;"><a href="define_tsMetaData.html">define_tsMetaData</a></td>
 <td>define_tsMetaData</td></tr>
+<tr><td style="width: 25%;"><a href="leadLagClusterPlot.html">leadLagClusterPlot</a></td>
+<td>leadLagClusterPlot</td></tr>
+<tr><td style="width: 25%;"><a href="leadLagCorr_diffs.html">leadLagCorr_diffs</a></td>
+<td>leadLagCorr_diffs</td></tr>
 <tr><td style="width: 25%;"><a href="lifeTimesChain.html">lifeTimesChain</a></td>
 <td>lifeTimesChain</td></tr>
 <tr><td style="width: 25%;"><a href="wide_ts_to_ccf.html">wide_ts_to_ccf</a></td>
-<td>Title</td></tr>
+<td>pairedCCFs</td></tr>
 </table>
 </body></html>
